deploy: 0d1c495dc8151aca35a83ea080dfc3494d38578f

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@ useful when waiting for some asynchronous task to happen in a test.</li>
 <hr>
 <ul>
 <li><code>concurrency</code> &mdash; limits the number of concurrent executions of asynchronous
-code.</li>
+code. <code>concurrencyDecorator</code> limits the number of concurrent executions of a
+class method.</li>
 </ul>
 <hr>
 <ul>
