deploy: 0f352687df00019e0b73accbd8789ca54000cecc

--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@ or a higher order function.</p>
 </ul>
 <hr>
 <ul>
+<li><code>once</code> &mdash; a class method decorator, which limits method execution to once
+per instance. Returns the result of the first execution for all subsequent calls.</li>
+</ul>
+<hr>
+<ul>
 <li><code>loadCss</code> &mdash; loads a CSS file into the DOM, given a URL. Does nothing on the
 server.</li>
 </ul>
