--- a/modules.html
+++ b/modules.html
@@ -17,6 +17,7 @@
 <a href="functions/decode64.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-64"></use></svg><span>decode64</span></a>
 <a href="functions/encode64.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-64"></use></svg><span>encode64</span></a>
 <a href="functions/go.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-64"></use></svg><span>go</span></a>
+<a href="functions/hasKeys.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-64"></use></svg><span>has<wbr/>Keys</span></a>
 <a href="functions/hash.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-64"></use></svg><span>hash</span></a>
 <a href="functions/loadCss.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-64"></use></svg><span>load<wbr/>Css</span></a>
 <a href="functions/makeXorShift32.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-64"></use></svg><span>make<wbr/>Xor<wbr/>Shift32</span></a>
