deploy: be86c9aac860bf877ac7200e4c12a7fb6dcb9426

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@ for generating a shard index of a record based on its ID.</li>
 </ul>
 <hr>
 <ul>
-<li><code>LruMap</code> &mdash; tiny and fast <em>Least Recently Used Cache</em> implemented on top of the <code>Map</code> class.</li>
+<li><code>LruMap</code> &mdash; tiny and fast <em>Least Recently Used Cache</em> implemented on top of the <code>Map</code> class.
+The default limit is around 1 billion items (2^30 - 1).</li>
 </ul>
 <hr>
 <ul>
