deploy: 1eaaf32de8c2e17569de67edebd583a7d8c71eb0

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@ stored for each entry implemented on top of the <code>LruMap</code> class.</li>
 </ul>
 <hr>
 <ul>
+<li><code>LruCache</code> &mdash; a <em>Least Recently Used Cache</em> implemented using <code>Object</code> and doubly linked list.
+The default limit is around 1 billion items (2^30 - 1).</li>
+</ul>
+<hr>
+<ul>
 <li><code>normalizeEmail</code> &mdash; normalizes email by stripping out <code>.</code> and <code>+</code> characters and
 removing everything after the <code>+</code> character and lower-casing the e-mail. Useful for
 getting an e-mail into a common form when throttling requests by e-mail.</li>
