--- a/modules.html
+++ b/modules.html
@@ -2,6 +2,7 @@
 <a href="classes/Defer.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-128"></use></svg><span>Defer</span></a>
 <a href="classes/FanOut.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-128"></use></svg><span>Fan<wbr/>Out</span></a>
 <a href="classes/Locks.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-128"></use></svg><span>Locks</span></a>
+<a href="classes/LruCache.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-128"></use></svg><span>Lru<wbr/>Cache</span></a>
 <a href="classes/LruMap.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-128"></use></svg><span>Lru<wbr/>Map</span></a>
 <a href="classes/LruTtlMap.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-128"></use></svg><span>Lru<wbr/>Ttl<wbr/>Map</span></a>
 <a href="classes/TimedQueue.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="assets/icons.svg#icon-128"></use></svg><span>Timed<wbr/>Queue</span></a>
