--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@ control the behavior of a <code>Promise</code>.</li>
 </ul>
 <hr>
 <ul>
+<li><code>@debug</code> &mdash; a class method or function decorator, which logs
+the input and output of the function in non-production environments.</li>
+</ul>
+<hr>
+<ul>
 <li><code>hash</code> &mdash; a fast and simple utility, which hashes a string to an integer. Useful
 for generating a shard index of a record based on its ID.</li>
 </ul>
